--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "@types/react-dom": "^18.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "recoil": "^0.7.4",
     "typescript": "^4.7.4",
+    "v6": "^0.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
